--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -26,7 +26,7 @@
 
 .button {
   padding: 10px 20px;
-  margin: 0 10px;
+  margin: 10px;
   border-radius: 20px;
   background: #3e4684;
   font-size: 20px;
@@ -49,15 +49,33 @@
 
 .loginSignupInput {
   display: block;
-  /* max-width: 100%; */
   width: 100%;
   padding: 10px;
-  border-radius: 20px;
+  border-radius: 10px;
   margin-bottom: 20px;
+  border: 1px solid black;
   outline: none;
 }
 
 .errorParagraph {
   color: red;
   text-align: center;
+}
+
+.birthDateSelect {
+  display: inline-block;
+  border: none;
+  border-radius: 3px;
+  padding: 10px;
+  outline: none;
+  margin: 5px;
+  width: 105px;
+}
+
+.birthDateStyle > select:nth-child(1) {
+  margin-left: 0;
+}
+
+.birthDateStyle > select:nth-child(3) {
+  margin-right: 0;
 }
