--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Lora:wght@500&family=Merriweather:wght@300&family=Poppins&family=Raleway:wght@200&display=swap');
+
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Lora', serif;
   background-color: #f1f7fe;
 }
 
