Redirect home page into login page.

--- a/components/Navbar.module.css
+++ b/components/Navbar.module.css
@@ -10,6 +10,7 @@
   margin: 0;
   height: 65px;
   background-color: #dde5f4; 
+  background-color: #86A3C3; 
   display: flex;
   justify-content: flex-end;
   align-items: center;
