--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,12 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Lora:wght@500&family=Merriweather:wght@300&family=Poppins&family=Raleway:wght@200&display=swap');
-
-
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: 'Lora', serif;
-  background-color: #f1f7fe;
+  background-color: rgb(245, 241, 241);
 }
 
 a {
