--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -4,7 +4,7 @@
 
 .divImageSentence,
 .loginSignupInput,
-.loginSignupSubmiButton,
+.allThreeButtons,
 .loginSignupLinkButton,
 .birthDateSelect,
 .pTagBirthDate {
@@ -65,14 +65,13 @@
 .mainFormContainer {
   display: flex;
   justify-content: center;
-  align-items: center;
   /* transition: all 0.6s ease-in-out; */
+  height: 100%;
 }
 
 .formContainer {
   display: flex;
   justify-content: center;
-  align-items: center;
   flex-direction: column;
   width: 70%;
   height: 100%;
@@ -94,7 +93,9 @@
 .loginLogoutTitle {
   font-size: 3.5em;
   position: absolute;
-  margin: 0;
+  top: 0px;
+  left: 50%;
+  transform: translate(-50%, 0%);
 }
 
 .inputBox {
@@ -143,19 +144,37 @@
   margin-bottom: 20px;
 }
 
-.loginSignupSubmiButton {
+.allButtonBox {
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+.allFourButtons {
   border: none;
   padding: 10px 20px;
-  margin-top: 45px;
-  color: #fff;
+  width: 100%;
   cursor: pointer;
   font-size: 16px;
-  background-color: #222831;
+  background: none;
+}
+
+.loginSignupSubmiButton {
   border-radius: 5px;
+  color: #fff;
+  background-color: #222831;
 }
 
 .loginSignupSubmiButton:hover {
   background-color: #393e46;
+}
+
+.customButtonBox {
+  background-color: #efefef;
+  border-radius: 5px;
+}
+
+.customButtonBox:hover {
+  background-color: #dcdcdc;
 }
 
 .signupSubmitBtn {
@@ -163,9 +182,23 @@
   bottom: 4em;
 }
 
+.buttonCustom {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.buttonIcons {
+  margin-left: 10px;
+}
+
 .loginSignupLinkButton {
   position: absolute;
   bottom: 20px;
+  left: 50%;
+  transform: translate(-50%, 0);
+  white-space: nowrap;
 }
 
 .loginSignupLinkButton:hover {
