--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -209,9 +209,10 @@
 
 .errorParagraph {
   color: red;
-  text-align: center;
   position: absolute;
   bottom: 6.5em;
+  text-align: center;
+  width: 100%;
 }
 
 .error {
